// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`password should validate at least one digit 1`] = `
Array [
  Object {
    "code": "custom",
    "message": "Invalid input",
    "params": Object {
      "code": "invalid_password_no_digit",
      "isNestJsZod": true,
    },
    "path": Array [],
  },
]
`;

exports[`password should validate at least one lowercase 1`] = `
Array [
  Object {
    "code": "custom",
    "message": "Invalid input",
    "params": Object {
      "code": "invalid_password_no_lowercase",
      "isNestJsZod": true,
    },
    "path": Array [],
  },
]
`;

exports[`password should validate at least one special 1`] = `
Array [
  Object {
    "code": "custom",
    "message": "Invalid input",
    "params": Object {
      "code": "invalid_password_no_special",
      "isNestJsZod": true,
    },
    "path": Array [],
  },
]
`;

exports[`password should validate at least one uppercase 1`] = `
Array [
  Object {
    "code": "custom",
    "message": "Invalid input",
    "params": Object {
      "code": "invalid_password_no_uppercase",
      "isNestJsZod": true,
    },
    "path": Array [],
  },
]
`;

exports[`password should validate min/max length 1`] = `
Array [
  Object {
    "code": "too_small",
    "inclusive": true,
    "message": "Invalid input",
    "minimum": 8,
    "path": Array [],
    "type": "password",
  },
]
`;

exports[`password should validate min/max length 2`] = `
Array [
  Object {
    "code": "too_big",
    "inclusive": true,
    "maximum": 20,
    "message": "Invalid input",
    "path": Array [],
    "type": "password",
  },
]
`;

exports[`password should validate type 1`] = `
Array [
  Object {
    "code": "invalid_type",
    "expected": "string",
    "message": "Required",
    "path": Array [],
    "received": "undefined",
  },
]
`;

exports[`password should validate type 2`] = `
Array [
  Object {
    "code": "invalid_type",
    "expected": "string",
    "message": "Expected string, received number",
    "path": Array [],
    "received": "number",
  },
]
`;
